# CineVerse

./: .gitignore  pyproject.toml  requirements.txt
Cineflix/: app.py  movie_chatbot.py  movie_details.py  movie_recommender.py  movie_sumariser.py  movies_dataset.csv
